Changes to YASB config.yaml and styles.css

--- a/yasb/styles.css
+++ b/yasb/styles.css
@@ -1,6 +1,6 @@
-/* ===================== */
+/* ======================= */
 /* === COLOR VARIABLES === */
-/* ===================== */
+/* ======================= */
 :root {
     /* Catppuccin Mocha color palette */
     --rosewater: #f5e0dc;
@@ -39,9 +39,10 @@
     --crust: rgba(17, 17, 27, 0.75);
 }
 
-/* ================= */
+
+/* =================== */
 /* === BASE STYLES === */
-/* ================= */
+/* =================== */
 * {
     font-size: 12px;
     color: var(--subtext0);
@@ -51,13 +52,13 @@
     padding: 0;
 }
 
-/* ================= */
+
+/* ================== */
 /* === BAR LAYOUT === */
-/* ================= */
+/* ================== */
 .yasb-bar {
     padding: 0;
     margin: 0;
-    background-color: var(--crust);
 }
 
 /* Common widget styles */
@@ -79,9 +80,10 @@
     margin: 0 4px 0 0;
 }
 
-/* ==================== */
+
+/* ================== */
 /* === POWER MENU === */
-/* ==================== */
+/* ================== */
 .power-menu-widget .label {
     color: var(--red);
     font-size: 13px;
@@ -136,11 +138,10 @@
 }
 
 
-/* ================= */
+/* ==================== */
 /* === CLOCK WIDGET === */
-/* ================= */
+/* ==================== */
 .clock-widget {
-    background-color: var(--mantle);
     margin: 4px 0;
     border-radius: 12px;
     border: 0;
@@ -158,9 +159,9 @@
 }
 
 
-/* ==================== */
+/* ====================== */
 /* === WEATHER WIDGET === */
-/* ==================== */
+/* ====================== */
 .weather-widget .icon {
     font-size: 20px;
     margin: 0 2px 1px 0;
@@ -171,30 +172,33 @@
     background-color: var(--mantle);
 }
 
-/* ================= */
+
+/* =================== */
 /* === WIFI WIDGET === */
-/* ================= */
+/* =================== */
 .wifi-widget .icon {
     color: var(--yellow);
 }
 
-/* ===================== */
+/* ====================== */
 /* === BATTERY WIDGET === */
-/* ===================== */
+/* ====================== */
 .battery-widget .icon {
     color: var(--flamingo);
 }
 
-/* ==================== */
+
+/* ===================== */
 /* === MEMORY WIDGET === */
-/* ==================== */
+/* ===================== */
 .memory-widget .icon {
     color: var(--mauve);
 }
 
-/* ================= */
+
+/* ===================== */
 /* === UPTIME WIDGET === */
-/* ================= */
+/* ===================== */
 .uptime {
     font-size: 14px;
     margin-bottom: 10px;
@@ -202,9 +206,10 @@
     font-weight: 600;
 }
 
-/* ================= */
+
+/* =================== */
 /* === HOME WIDGET === */
-/* ================= */
+/* =================== */
 .home-widget {
     padding: 0 4px 0 12px;
 }
@@ -238,6 +243,7 @@
     background-color: var(--overlay0);
     margin: 0 8px;
 }
+
 
 /* ======================== */
 /* === WORKSPACE WIDGET === */
