--- a/yasb/styles.css
+++ b/yasb/styles.css
@@ -46,7 +46,7 @@
     font-size: 12px;
     color: var(--subtext0);
     font-weight: 700;
-    font-family: "JetBrainsMono NFP";
+    font-family: "JetBrainsMono NFP", system-ui;
     margin: 0;
     padding: 0;
 }
@@ -67,11 +67,11 @@
 }
 
 .widget .label {
-    padding: 0px 2px;
+    padding: 0 2px;
 }
 
 .widget .label.alt {
-    padding: 0px 2px;
+    padding: 0 2px;
 }
 
 .icon {
@@ -98,7 +98,7 @@
     border-radius: 8px;
     background-color: var(--base);
     border: 8px solid rgba(58, 59, 83, 0);
-    margin: 0px;
+    margin: 0;
 }
 
 .power-menu-popup .button.hover {
@@ -149,12 +149,11 @@
 }
 
 .audio-container .device {
-    font-size: 20px;
     background-color: transparent;
     border: none;
     padding: 6px 8px 6px 4px;
     margin: 2px 0;
-    font-size: 12px;
+    font-size: 13px;
     border-radius: 4px;
 }
 
@@ -232,48 +231,11 @@
     margin-top: -20px;
 }
 
-/* ==================== */
-/* === WEATHER WIDGET === */
-/* ==================== */
-.weather-widget .icon {
-    font-size: 20px;
-    margin: 0 2px 1px 0;
-    color: var(--maroon);
-}
-
-.weather-card {
-    background-color: var(--mantle);
-}
-
-/* ================= */
-/* === WIFI WIDGET === */
-/* ================= */
-.wifi-widget .icon {
-    color: var(--yellow);
-}
-
 /* ===================== */
 /* === BATTERY WIDGET === */
 /* ===================== */
 .battery-widget .icon {
     color: var(--flamingo);
-}
-
-/* ==================== */
-/* === MEMORY WIDGET === */
-/* ==================== */
-.memory-widget .icon {
-    color: var(--mauve);
-}
-
-/* ================= */
-/* === UPTIME WIDGET === */
-/* ================= */
-.uptime {
-    font-size: 14px;
-    margin-bottom: 10px;
-    color: var(--surface2);
-    font-weight: 600;
 }
 
 /* ================= */
